--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
                 $.mobile.allowCrossDomainPages = true;
 				$.mobile.selectmenu.prototype.options.nativeMenu = false;
             });
-        </script>    
+        </script>
 		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-        <!-- <script type="text/javascript" src="js/jquery.mobile.customized.min.js"></script> -->
+        <script src="phonegap.js"></script>
+        <!-- 
+        <script type="text/javascript" src="js/jquery.mobile.customized.min.js"></script>
         <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="js/camera.min.js"></script>
         <script src="phonegap.js"></script>
@@ -82,100 +84,18 @@
 		
 			// PhoneGap est prêt
 			function onDeviceReady() {
-				if(navigator.network.connection.type == Connection.NONE){
-					$("body").empty().append('<img src="no_network.png" onClick="window.location.reload()" />');
-				}
+              if(navigator.network.connection.type == Connection.NONE){
+                $("body").empty().append('<img src="no_network.png" onClick="window.location.reload()" />');
+              }
+			  else {
+				  document.location.href='http://www.taximedia.fr/taxipad/34/index.php';
+			  }
 			}
 		</script>
         <style type="text/css">
-			.fluid_container {
-				margin: 0 auto;
-				max-width: 1000px;
-				width: 90%;
-			}
-			camera_thumbs_cont {
-				-moz-border-radius: 16px;
-				border-radius: 16px;
-				box-shadow: 0 0 6px #000;
-				-moz-box-shadow: 0 0 6px #000; 
-				-webkit-box-shadow: 0 0 6px #000;
-				background: #333;
-			}
         </style>
-		<script type="text/javascript">
-
-			jQuery(function(){
-				
-				jQuery('#camera_wrap').camera({
-					loader: 'bar',
-					loaderColor: '#0CF',
-					loaderBgColor: '#FFF',
-					pagination: true,
-					playPause: true,
-					pauseOnClick: true,
-					time: 7000,
-					transPeriod: 1500,
-					thumbnails: true
-				});
-	
-			});
-			$(document).bind( 'pageinit', function() {	   
-				/*
-				$('#camera_wrap').camera({
-					thumbnails: true
-				});
-				*/
-			});
-
-        </script>        
         
     </head>
-    <body>
-    <center>
-        <div data-role="page" data-theme="a" id="portal">
-            <div data-theme="a" data-role="header" data-position="fixed">
-            </div>
-            <div data-role="content">
-                <div class="fluid_container">
-                    <div class="camera_wrap camera_azure_skin" id="camera_wrap">
-                        <div data-thumb="images/slides/thumbs/bridge.jpg" data-src="images/slides/bridge.jpg">
-                            <div class="camera_caption fadeFromBottom">
-                                Camera is a responsive/adaptive slideshow. <em>Try to resize the browser window</em>
-                            </div>
-                        </div>
-                        <div data-thumb="images/slides/thumbs/leaf.jpg" data-src="images/slides/leaf.jpg">
-                            <div class="camera_caption fadeFromBottom">
-                                It uses a light version of jQuery mobile, <em>navigate the slides by swiping with your fingers</em>
-                            </div>
-                        </div>
-                        <div data-thumb="images/slides/thumbs/road.jpg" data-src="images/slides/road.jpg">
-                            <div class="camera_caption fadeFromBottom">
-                                <em>It's completely free</em> (even if a donation is appreciated)
-                            </div>
-                        </div>
-                        <div data-thumb="images/slides/thumbs/sea.jpg" data-src="images/slides/sea.jpg">
-                            <div class="camera_caption fadeFromBottom">
-                                Camera slideshow provides many options <em>to customize your project</em> as more as possible
-                            </div>
-                        </div>
-                        <div data-thumb="images/slides/thumbs/shelter.jpg" data-src="images/slides/shelter.jpg">
-                            <div class="camera_caption fadeFromBottom">
-                                It supports captions, HTML elements and videos and <em>it's validated in HTML5</em> (<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fwww.pixedelic.com%2Fplugins%2Fcamera%2F&amp;charset=%28detect+automatically%29&amp;doctype=Inline&amp;group=0&amp;user-agent=W3C_Validator%2F1.2" target="_blank">have a look</a>)
-                            </div>
-                        </div>
-                        <div data-thumb="images/slides/thumbs/tree.jpg" data-src="images/slides/tree.jpg">
-                            <div class="camera_caption fadeFromBottom">
-                                Different color skins and layouts available, <em>fullscreen ready too</em>
-                            </div>
-                        </div>
-                    </div><!-- #camera_wrap_1 -->
-                </div>
-            <div style="clear:both; display:block; height:10px"></div>
-            </div>
-            <div data-theme="a" data-role="footer" id="footer_cont" data-position="fixed">
-                <p class="copyright" style="font-size:xx-small">&copy; TaxiMedia</p>
-            </div>
-        </div>
-    </center>
+    <body style="margin:0; padding:0;">
     </body>
 </html>
